	* cleaned things up to create a version enum and associated obvious names
	with the versions so that its more obvious to read and more extendable,
	encryption is marked in the version by the base version ored with 0x8000.
	* some mods to the old list conversion to new list format, removes at 
	least one crash and might solve others, possibly not a full solution.
ALL TODO
	* Got to think of some way to keep the list stuff in sync with the margins 
	of the enclosed paragraphs in html output.

	* break stylesheet into two, first read all the poxy little sprms into one 
	location and afterwards do the pap and chp generation.

	* need to add a color Auto thing that figures out what color goes against 
	what fore or back ground.
	* multiple columns are part of section code, how to support this in html 
	without brain failure.

	* put the default text and char stuff into one single "style", and then 
	try and figure out a way to save arbitrary no of styles into some nice 
	structure for later seaching and stylesheet implementation.


	* title not being done in the correct charset

	* style overrides for each word style, example idea in wvHtml.xml

	* comment/footnote and endnote support.

	* fully implement tablelooks, the flags in particular, and maybe the 
	colors for the bg should be farmed out to sperate config options rather
	than piggy backing on the other colors, also why did one of the text
	foregrounds not work on its own, while the others did, and is there
	one of two cases where our grid will not handle every case ?

	* bring in some stylesheet constructs, such as para indentation and
	font size and color and so on. move things that direction instead.

	* add another option for table width, i.e. tableabswidth.
	* we need character formatting for the <li> itself, we can do this I 
	suppose, but i'll hold off on that for a while.

	* fontface and size for char runs..

	* what about a collision between underline and revision added ? and also 